// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CategoryCard Default 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgb(227,93,93)",
        "borderRadius": 4,
        "elevation": 1,
        "justifyContent": "center",
        "margin": 5,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 0.5,
          "width": 0,
        },
        "shadowOpacity": 0.24,
        "shadowRadius": 0.75,
      }
    }
  >
    <View
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingHorizontal": 16,
            },
            Object {
              "paddingVertical": 16,
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "Helvetica Neue",
                "textAlign": "left",
                "writingDirection": "ltr",
              },
              Array [
                Object {
                  "color": "rgba(0, 0, 0, 0.87)",
                  "fontFamily": "HelveticaNeue-Medium",
                  "textAlign": "left",
                  "writingDirection": "ltr",
                },
                Array [
                  Object {
                    "fontSize": 20,
                    "lineHeight": 30,
                    "marginVertical": 2,
                  },
                  Object {
                    "color": "white",
                  },
                ],
                Array [
                  Object {
                    "fontSize": 20,
                    "lineHeight": 30,
                    "marginVertical": 2,
                  },
                  Object {
                    "color": "white",
                  },
                ],
              ],
            ]
          }
        >
          Nightlife
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots CitySelector Default 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "marginBottom": 5,
    }
  }
>
  <View
    onLayout={[Function]}
  >
    <View
      accessible={true}
      hitSlop={
        Object {
          "bottom": 6,
          "left": 4,
          "right": 4,
          "top": 6,
        }
      }
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      pointerEvents="box-only"
    >
      <View
        onResponderRelease={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="none"
      >
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "borderBottomColor": "rgba(0, 0, 0, 0.38)",
              "borderBottomWidth": 0.5,
              "height": 57,
              "paddingBottom": 8,
              "paddingTop": 31,
            }
          }
        >
          <View
            style={
              Object {
                "position": "absolute",
                "top": 15,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Object {
                  "color": "rgba(0, 0, 0, 0.38)",
                  "fontSize": 12,
                }
              }
            >
              Select a city
            </Text>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <TextInput
              absoluteRTLLayout={false}
              allowFontScaling={true}
              autoCapitalize="sentences"
              data={
                Array [
                  Object {
                    "value": "New York",
                  },
                  Object {
                    "value": "Pittsburgh",
                  },
                ]
              }
              disableFullscreenUI={true}
              dropdownMargins={
                Object {
                  "max": 16,
                  "min": 8,
                }
              }
              dropdownOffset={
                Object {
                  "left": 0,
                  "top": 32,
                }
              }
              dropdownPosition={0}
              editable={false}
              itemColor="rgba(0, 0, 0, .54)"
              itemCount={4}
              itemPadding={8}
              labelExtractor={[Function]}
              onBlur={[Function]}
              onChange={[Function]}
              onChangeText={[Function]}
              onContentSizeChange={[Function]}
              onFocus={[Function]}
              propsExtractor={[Function]}
              renderAccessory={[Function]}
              rippleDuration={400}
              selectionColor="rgb(0, 145, 234)"
              shadeOpacity={0.12}
              style={
                Array [
                  Object {
                    "flex": 1,
                    "margin": 0,
                    "padding": 0,
                    "top": 2,
                  },
                  Object {
                    "color": "rgba(0, 0, 0, .87)",
                    "fontSize": 12,
                    "height": 18,
                    "textAlign": "left",
                  },
                  undefined,
                ]
              }
              underlineColorAndroid="transparent"
              useNativeDriver={false}
              value="New York"
              valueExtractor={[Function]}
            />
            <View
              style={
                Object {
                  "alignSelf": "flex-start",
                  "justifyContent": "center",
                  "top": 2,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "height": 24,
                    "justifyContent": "center",
                    "width": 24,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "height": 6,
                      "overflow": "hidden",
                      "width": 12,
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "height": 8,
                          "transform": Array [
                            Object {
                              "translateY": -4,
                            },
                            Object {
                              "rotate": "45deg",
                            },
                          ],
                          "width": 8,
                        },
                        Object {
                          "backgroundColor": "rgba(0, 0, 0, .38)",
                        },
                      ]
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "height": 8,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "bottom": 0,
                  "left": 0,
                  "paddingVertical": 4,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "color": "rgb(213, 0, 0)",
                    "fontSize": 0,
                    "opacity": 0,
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "bottom": 0,
                  "left": 0,
                  "paddingVertical": 4,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "color": "rgba(0, 0, 0, .38)",
                    "fontSize": 12,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        accessible={true}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onRippleAnimation={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
        rippleCentered={false}
        rippleColor="rgba(0, 0, 0, .38)"
        rippleDuration={400}
        rippleFades={true}
        rippleOpacity={0.54}
        rippleSequential={true}
        rippleSize={0}
        style={
          Object {
            "height": 42,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 16,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "borderRadius": 0,
              },
            ]
          }
        />
      </View>
    </View>
    <Modal
      hardwareAccelerated={false}
      onRequestClose={[Function]}
      supportedOrientations={
        Array [
          "portrait",
          "portrait-upside-down",
          "landscape",
          "landscape-left",
          "landscape-right",
        ]
      }
      transparent={true}
      visible={false}
    >
      <View
        onResponderRelease={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "rgba(255, 255, 255, 1.0)",
                "borderRadius": 2,
                "position": "absolute",
                "shadowColor": "rgba(0, 0, 0, 1.0)",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 0.54,
                "shadowRadius": 2,
              },
              Object {
                "height": 84,
                "left": undefined,
                "top": undefined,
                "transform": Array [
                  Object {
                    "translateY": -8,
                  },
                ],
                "width": undefined,
              },
              undefined,
            ]
          }
        >
          <RCTScrollView
            contentContainerStyle={
              Object {
                "paddingVertical": 8,
              }
            }
            data={
              Array [
                Object {
                  "value": "New York",
                },
                Object {
                  "value": "Pittsburgh",
                },
              ]
            }
            disableVirtualization={false}
            getItem={[Function]}
            getItemCount={[Function]}
            horizontal={false}
            initialNumToRender={10}
            keyExtractor={[Function]}
            maxToRenderPerBatch={10}
            numColumns={1}
            onContentSizeChange={[Function]}
            onEndReachedThreshold={2}
            onLayout={[Function]}
            onMomentumScrollEnd={[Function]}
            onScroll={[Function]}
            onScrollBeginDrag={[Function]}
            onScrollEndDrag={[Function]}
            renderItem={[Function]}
            scrollEnabled={false}
            scrollEventThrottle={50}
            stickyHeaderIndices={Array []}
            style={
              Object {
                "borderRadius": 2,
                "flex": 1,
              }
            }
            updateCellsBatchingPeriod={50}
            viewabilityConfigCallbackPairs={Array []}
            windowSize={21}
          >
            <View>
              <View
                onLayout={[Function]}
                style={null}
              >
                <View
                  accessible={true}
                  focusAnimation={null}
                  focusAnimationDuration={225}
                  hitSlop={
                    Object {
                      "bottom": 6,
                      "left": 4,
                      "right": 4,
                      "top": 6,
                    }
                  }
                  onLayout={[Function]}
                  onPress={[Function]}
                  onPressIn={[Function]}
                  onPressOut={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  pointerEvents="box-only"
                  rippleCentered={false}
                  rippleColor="rgba(0, 0, 0, .38)"
                  rippleDuration={400}
                  rippleFades={true}
                  rippleOpacity={0.54}
                  rippleSequential={true}
                  rippleSize={0}
                  style={
                    Object {
                      "backgroundColor": "transparent",
                      "borderRadius": 0,
                      "height": 34,
                      "justifyContent": "center",
                      "paddingLeft": undefined,
                      "paddingRight": undefined,
                      "paddingVertical": 8,
                    }
                  }
                >
                  <Text
                    numberOfLines={1}
                    style={
                      Array [
                        Object {
                          "textAlign": "left",
                        },
                        undefined,
                        Object {
                          "color": "rgba(0, 0, 0, .87)",
                          "fontSize": 12,
                        },
                      ]
                    }
                  >
                    New York
                  </Text>
                  <View
                    style={
                      Object {
                        "backgroundColor": "rgba(0, 0, 0, .38)",
                        "borderRadius": 0,
                        "bottom": 0,
                        "left": 0,
                        "opacity": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      }
                    }
                  />
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "transparent",
                          "bottom": 0,
                          "left": 0,
                          "overflow": "hidden",
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        },
                        Object {
                          "borderRadius": 0,
                        },
                      ]
                    }
                  />
                </View>
              </View>
              <View
                onLayout={[Function]}
                style={null}
              >
                <View
                  accessible={true}
                  focusAnimation={null}
                  focusAnimationDuration={225}
                  hitSlop={
                    Object {
                      "bottom": 6,
                      "left": 4,
                      "right": 4,
                      "top": 6,
                    }
                  }
                  onLayout={[Function]}
                  onPress={[Function]}
                  onPressIn={[Function]}
                  onPressOut={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  pointerEvents="box-only"
                  rippleCentered={false}
                  rippleColor="rgba(0, 0, 0, .38)"
                  rippleDuration={400}
                  rippleFades={true}
                  rippleOpacity={0.54}
                  rippleSequential={true}
                  rippleSize={0}
                  style={
                    Object {
                      "backgroundColor": "transparent",
                      "borderRadius": 0,
                      "height": 34,
                      "justifyContent": "center",
                      "paddingLeft": undefined,
                      "paddingRight": undefined,
                      "paddingVertical": 8,
                    }
                  }
                >
                  <Text
                    numberOfLines={1}
                    style={
                      Array [
                        Object {
                          "textAlign": "left",
                        },
                        undefined,
                        Object {
                          "color": "rgba(0, 0, 0, .87)",
                          "fontSize": 12,
                        },
                      ]
                    }
                  >
                    Pittsburgh
                  </Text>
                  <View
                    style={
                      Object {
                        "backgroundColor": "rgba(0, 0, 0, .38)",
                        "borderRadius": 0,
                        "bottom": 0,
                        "left": 0,
                        "opacity": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      }
                    }
                  />
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "transparent",
                          "bottom": 0,
                          "left": 0,
                          "overflow": "hidden",
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        },
                        Object {
                          "borderRadius": 0,
                        },
                      ]
                    }
                  />
                </View>
              </View>
            </View>
          </RCTScrollView>
        </View>
      </View>
    </Modal>
  </View>
</View>
`;

exports[`Storyshots RestaurantCard Default 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
      "marginBottom": 10,
      "opacity": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 4,
        "elevation": 1,
        "padding": 5,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 0.5,
          "width": 0,
        },
        "shadowOpacity": 0.24,
        "shadowRadius": 0.75,
      }
    }
  >
    <View
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <View
        index={0}
        siblings={
          Array [
            "View",
            "Text",
          ]
        }
        style={
          Object {
            "flexDirection": "row",
          }
        }
        total={2}
      >
        <Image
          source={
            Object {
              "uri": "https://b.zmtcdn.com/data/res_imagery/16777320_RESTAURANT_5bc92fcf35438e2404eb918270b2ea2c.jpg",
            }
          }
          style={
            Object {
              "height": 65,
              "width": 65,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "marginLeft": 5,
            }
          }
        >
          <Text
            style={
              Object {
                "fontSize": 16,
              }
            }
          >
            AWESOME RESTAURANT
          </Text>
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "margin": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": undefined,
                      "fontSize": 12,
                    },
                    Object {
                      "color": "#ffd700",
                    },
                    Object {
                      "fontFamily": "FontAwesome",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": undefined,
                      "fontSize": 12,
                    },
                    Object {
                      "color": "#ffd700",
                    },
                    Object {
                      "fontFamily": "FontAwesome",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": undefined,
                      "fontSize": 12,
                    },
                    Object {
                      "color": "#ffd700",
                    },
                    Object {
                      "fontFamily": "FontAwesome",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": undefined,
                      "fontSize": 12,
                    },
                    Object {
                      "color": "#ffd700",
                    },
                    Object {
                      "fontFamily": "FontAwesome",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": undefined,
                      "fontSize": 12,
                    },
                    Object {
                      "color": "rgb(215,215,215)",
                    },
                    Object {
                      "fontFamily": "FontAwesome",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "rgb(128,128,128)",
                  "fontSize": 12,
                }
              }
            >
              Very Good
               
            </Text>
            <Text
              style={
                Object {
                  "color": "rgb(128,128,128)",
                  "fontSize": 12,
                }
              }
            >
              $$
            </Text>
          </View>
          <Text
            style={
              Object {
                "color": "rgb(128,128,128)",
                "fontSize": 12,
              }
            }
          >
            BEST CUISINES
          </Text>
        </View>
      </View>
      <Text
        index={1}
        siblings={
          Array [
            "View",
            "Text",
          ]
        }
        style={
          Object {
            "color": "rgb(128,128,128)",
            "fontSize": 12,
          }
        }
        total={2}
      >
        TOP PLACE
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots StarRating Default 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 12,
        },
        Object {
          "color": "#ffd700",
        },
        Object {
          "fontFamily": "FontAwesome",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 12,
        },
        Object {
          "color": "#ffd700",
        },
        Object {
          "fontFamily": "FontAwesome",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 12,
        },
        Object {
          "color": "#ffd700",
        },
        Object {
          "fontFamily": "FontAwesome",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 12,
        },
        Object {
          "color": "#ffd700",
        },
        Object {
          "fontFamily": "FontAwesome",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 12,
        },
        Object {
          "color": "rgb(215,215,215)",
        },
        Object {
          "fontFamily": "FontAwesome",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
</View>
`;
